# fadors_c99

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  bench.sh  build_dos_compiler.sh  build_stage1.bat  build_stage1.sh  build_stage2.bat  link_stage1.bat  run_coff_tests.bat  run_dumpbin.bat  run_pe_tests.bat  run_single_test.bat  run_tests.bat  test_analysis.sh  test_debug.sh  test_dos.c  test_dos_io.c  test_dos_minimal.c  test_ir.sh  test_linker.sh  test_obj.sh  test_opt.sh  test_phase4d.sh  test_ssa.sh  test_stage1.sh  test_stage2.sh  test_stage3_stage4.sh  test_valgrind.sh  verify_coff.py  verify_obj.bat
include/: assert.h  ctype.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h
src/: arch_x86.c  arch_x86.h  arch_x86_64.c  arch_x86_64.h  as_parser.c  as_parser.h  ast.c  ast.h  buffer.c  buffer.h  codegen.c  codegen.h  coff.h  coff_writer.c  coff_writer.h  dos_lib.s  dos_libc.c  dos_linker.c  dos_linker.h  dos_stub.h  elf.h  elf_writer.c  elf_writer.h  encoder.c  encoder.h  ir.c  ir.h  lexer.c  lexer.h  linker.c  linker.h  main.c  optimizer.c  optimizer.h  parser.c  parser.h  pe.h  pe_linker.c  pe_linker.h  pgo.c  (+5 more)
tests/: 04_if.c  05_complex_expr.c  06_while.c  07_function.c  08_header.h  08_include.c  09_struct_ptr.c  10_ptr.c  12_string.c  13_extern.c  14_params.c  15_nested_calls.c  16_void_func.c  17_for.c  18_typedef.c  19_array.c  20_switch.c  21_enum.c  22_union.c  23_pointer_math.c  25_global.c  26_external.c  27_float.c  28_minimal_float.c  29_float_unary_ret.c  30_const_fold.c  31_binary_ops_int.c  31_strength_reduce.c  32_dead_code.c  (+74 more)
(+27 files in other folders)
